debezium/dbz#2241 Build Debezium Server distribution via Maven process
Signed-off-by: Binayak490-cyber <binayak490@gmail.com>